# endex

./: ;  Cargo.toml  README.md
src/: 2  ast.rs  document.rs  embeddings.rs  index.rs  language.rs  lib.rs  main.rs  project.rs
